plugins {
    id "java"
    id "com.gradleup.shadow" version "9.0.0-beta10"
}

group = 'net.echo'
version = '2.7.0'

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}

tasks.register('buildAll') {
    dependsOn ':brain4j-math:shadowJar', ':brain4j-core:shadowJar', ':brain4j-native:shadowJar'

    doLast {
        println 'Completed build for math, core and native.'
    }
}